Terminando layout nuevo

--- a/cuadros.html
+++ b/cuadros.html
@@ -41,27 +41,15 @@
     -->
 
     <div>
-        <div class="w-full h-[400px] overflow-hidden">
-            <img src="/assets/cuadros/20240614_210750.jpg" alt="Art Museum" width="1200" height="400"
-                class="w-full h-full object-cover" style="aspect-ratio: 1200 / 400; object-fit: cover;" />
+        <div class="w-full h-[600px] overflow-hidden">
+            <img src="/assets/cuadros/20240615_130515.jpg" alt="Art Museum" width="1200" height="600"
+                class="w-full h-full object-cover" style="aspect-ratio: 1200 / 600; object-fit: cover;" />
         </div>
         <div class="w-full max-w-6xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
             <h1 class="text-3xl font-bold mb-8">Cuadros</h1>
             <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-7 gap-6">
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="/placeholder.svg" alt="Painting 1" width="300" height="300"
-                        style="aspect-ratio: 300 / 300; object-fit: cover;"
-                        class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
-                    <div
-                        class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <div class="text-white text-center space-y-2">
-                            <h3 class="text-lg font-bold">Painting 1</h3>
-                            <p class="text-sm">Artist Name</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/carti-die-lit.png" alt="Painting 2" width="300"
+                    <img src="https://i.ezegatica.com/cuadros/carti-die-lit.png" alt="Playboi Carti - Die Lit cover" width="300"
                         height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
                     <div
@@ -73,8 +61,20 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/kanye-west-mbdtf.jpg" alt="Painting 3" width="300" height="300"
-                        style="aspect-ratio: 300 / 300; object-fit: cover;"
+                    <img src="https://i.ezegatica.com/cuadros/flying-lotus-LA-2x3.jpg" alt="Flying Lotus - L.A. EP 2 X 3 cover" width="300"
+                        height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
+                        class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
+                    <div
+                        class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <div class="text-white text-center space-y-2">
+                            <h3 class="text-lg font-bold">L.A. EP 2 X 3</h3>
+                            <p class="text-sm">Flying Lotus</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="relative group cursor-pointer overflow-hidden rounded-lg">
+                    <img src="https://i.ezegatica.com/cuadros/kanye-west-mbdtf.jpg" alt="Kanye West - My Beautiful Dark Twisted Fantasy cover" width="300"
+                        height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
                     <div
                         class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
@@ -85,32 +85,58 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/red%20hot%20chilli%20pepers%20blood%20sugar%20magik.png" alt="Painting 4" width="300" height="300"
-                        style="aspect-ratio: 300 / 300; object-fit: cover;"
+                    <img src="https://i.ezegatica.com/cuadros/red%20hot%20chilli%20pepers%20blood%20sugar%20magik.png"
+                        alt="Red Hot Chilli Peppers - Blood Sugar Sex Magik cover" width="300" height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
                     <div
                         class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <div class="text-white text-center space-y-2">
-                            <h3 class="text-lg font-bold">Blood Sugar Magik</h3>
+                            <h3 class="text-lg font-bold">Blood Sugar Sex Magik</h3>
                             <p class="text-sm">Red Hot Chilli Peppers</p>
                         </div>
                     </div>
                 </div>
+
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/travis-scott-franchise.jpg" alt="Painting 5" width="300" height="300"
+                    <img src="https://i.ezegatica.com/cuadros/tame-impala-currents.png" alt="Tame Impala - Currents cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
                     <div
                         class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <div class="text-white text-center space-y-2">
-                            <h3 class="text-lg font-bold">Franchise</h3>
+                            <h3 class="text-lg font-bold">Currents</h3>
+                            <p class="text-sm">Tame Impala</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="relative group cursor-pointer overflow-hidden rounded-lg">
+                    <img src="https://i.ezegatica.com/cuadros/travis-scott-franchise.jpg" alt="Travis Scott - Franchise cover" width="300"
+                        height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
+                        class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
+                    <div
+                        class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <div class="text-white text-center space-y-2">
+                            <h3 class="text-lg font-bold">FRANCHISE</h3>
                             <p class="text-sm">Travis Scott</p>
                         </div>
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/daft-punk-random-access-memories.png" alt="Painting 6" width="300" height="300"
-                        style="aspect-ratio: 300 / 300; object-fit: cover;"
+                    <img src="https://i.ezegatica.com/cuadros/childish-gambino-awaken-my-love.jpg" alt="Childish Gambino - Awaken, My Love! cover"
+                        width="300" height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
+                        class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
+                    <div
+                        class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <div class="text-white text-center space-y-2">
+                            <h3 class="text-lg font-bold">Awaken, My Love!</h3>
+                            <p class="text-sm">Childish Gambino</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="relative group cursor-pointer overflow-hidden rounded-lg">
+                    <img src="https://i.ezegatica.com/cuadros/daft-punk-random-access-memories.png" alt="Daft Punk - Random Access Memories cover"
+                        width="300" height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
                     <div
                         class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
@@ -121,32 +147,8 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="/placeholder.svg" alt="Painting 7" width="300" height="300"
-                        style="aspect-ratio: 300 / 300; object-fit: cover;"
-                        class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
-                    <div
-                        class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <div class="text-white text-center space-y-2">
-                            <h3 class="text-lg font-bold">Painting 7</h3>
-                            <p class="text-sm">Artist Name</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="/placeholder.svg" alt="Painting 8" width="300" height="300"
-                        style="aspect-ratio: 300 / 300; object-fit: cover;"
-                        class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
-                    <div
-                        class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <div class="text-white text-center space-y-2">
-                            <h3 class="text-lg font-bold">Painting 8</h3>
-                            <p class="text-sm">Artist Name</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/jackboys-jackboys.jpg" alt="Painting 9" width="300" height="300"
-                        style="aspect-ratio: 300 / 300; object-fit: cover;"
+                    <img src="https://i.ezegatica.com/cuadros/jackboys-jackboys.jpg" alt="JACKBOYS - JACKBOYS cover" width="300"
+                        height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
                     <div
                         class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
@@ -157,8 +159,8 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/tyler-flower-boy.png" alt="Painting 10" width="300" height="300"
-                        style="aspect-ratio: 300 / 300; object-fit: cover;"
+                    <img src="https://i.ezegatica.com/cuadros/tyler-flower-boy.png" alt="Tyler, the Creator - Flower Boy cover" width="300"
+                        height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
                     <div
                         class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
@@ -169,50 +171,50 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="/placeholder.svg" alt="Painting 11" width="300" height="300"
+                    <img src="https://i.ezegatica.com/cuadros/kids-see-ghosts.jpg" alt="KIDS SEE GHOSTS - KIDS SEE GHOSTS cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
                     <div
                         class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <div class="text-white text-center space-y-2">
-                            <h3 class="text-lg font-bold">Painting 11</h3>
-                            <p class="text-sm">Artist Name</p>
+                            <h3 class="text-lg font-bold">KIDS SEE GHOSTS</h3>
+                            <p class="text-sm">Kanye West & Kid Cudi</p>
                         </div>
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/childish-gambino-awaken-my-love.jpg" alt="Painting 12" width="300" height="300"
+                    <img src="https://i.ezegatica.com/cuadros/denzel-curry-melt-my-eyez.jpg" alt="Denzel Curry - Melt My Eyez See Your Future cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
                     <div
                         class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <div class="text-white text-center space-y-2">
-                            <h3 class="text-lg font-bold">Awaken, My Love!</h3>
-                            <p class="text-sm">Childish Gambino</p>
+                            <h3 class="text-lg font-bold">Melt My Eyez See Your Future</h3>
+                            <p class="text-sm">Denzel Curry</p>
                         </div>
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/kendrick-lamar-good-kid_maad-city.jpg" alt="Painting 13" width="300" height="300"
+                    <img src="https://i.ezegatica.com/cuadros/catriel-el-disko.png" alt="Catriel - El Disko cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
+                        class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
+                    <div
+                        class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <div class="text-white text-center space-y-2">
+                            <h3 class="text-lg font-bold">EL DISKO</h3>
+                            <p class="text-sm">CA7RIEL</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="relative group cursor-pointer overflow-hidden rounded-lg">
+                    <img src="https://i.ezegatica.com/cuadros/kendrick-lamar-good-kid_maad-city.jpg" alt="Kendrick Lamar - Good Kid, M.A.A.D City cover"
+                        width="300" height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
                     <div
                         class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <div class="text-white text-center space-y-2">
                             <h3 class="text-lg font-bold">Good Kid, M.A.A.D City</h3>
                             <p class="text-sm">Kendrick Lamar</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="/placeholder.svg" alt="Painting 14" width="300" height="300"
-                        style="aspect-ratio: 300 / 300; object-fit: cover;"
-                        class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
-                    <div
-                        class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <div class="text-white text-center space-y-2">
-                            <h3 class="text-lg font-bold">Painting 14</h3>
-                            <p class="text-sm">Artist Name</p>
                         </div>
                     </div>
                 </div>
