Imagen responsive en aspect ratio 2:1

--- a/cuadros.html
+++ b/cuadros.html
@@ -41,7 +41,7 @@
     -->
 
     <div>
-        <div class="w-full h-[600px] overflow-hidden">
+        <div class="w-full h-auto lg:h-[600px] overflow-hidden">
             <img src="/assets/cuadros/20240615_130515.jpg" alt="Art Museum" width="1200" height="600"
                 class="w-full h-full object-cover" style="aspect-ratio: 1200 / 600; object-fit: cover;" />
         </div>
