--- a/cuadros.html
+++ b/cuadros.html
@@ -291,7 +291,7 @@
     <footer class="w-full bg-gray-100  py-6 text-white text-center">
         <a href="https://printy.photos/cuadros-en-tela/cuadros-tela-clasicos/" target="_blank"
             class="text-gray-500 hover:text-gray-700">
-            Imprimí el tuyo acá
+            Imprimí el tuyo acá, yo usé 30x30
         </a>
     </footer>
 </body>
