Navegacion desde el menu indice

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <div class="go-forward">
         <a href="./proyectos" target="_self" rel="noopener noreferrer">
             PROYECTOS >
+        </a> <br/>
+        <a href="./cuadros" target="_self" rel="noopener noreferrer">
+            CUADROS >
         </a>
     </div>
 
