--- a/cuadros.html
+++ b/cuadros.html
@@ -27,7 +27,18 @@
         h6 {
             font-family: "Prata", serif;
         }
-    </style>
+
+        .go-back {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            color: white;
+        }
+
+        </style>
+        <meta name="og:title" content="Cuadros by Eze Gatica" />
+        <meta name="og:description" content="Los cuadros que tengo en mi cuarto, ordenados y listos para descargar" />
+        <meta name="og:image" content="https://i.ezegatica.com/cuadros/cover-1000x500.jpg" />
     <script
         src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -39,10 +50,13 @@
         // v0 by Vercel.
         // https://v0.dev/t/Jd89Lrtcq9V
     -->
-
+    <div class="go-back">
+        <a href="/" target="_self" rel="noopener noreferrer">
+            < ATRAS </a>
+    </div>
     <div>
         <div class="w-full h-auto lg:h-[600px] overflow-hidden">
-            <img src="/assets/cuadros/20240615_130515.jpg" alt="Art Museum" width="1200" height="600"
+            <img src="https://i.ezegatica.com/cuadros/cover-2000x1000.jpg" alt="Foto de los cuadros" width="1200" height="600"
                 class="w-full h-full object-cover" style="aspect-ratio: 1200 / 600; object-fit: cover;" />
         </div>
         <div class="w-full max-w-6xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
