Agregando OG meta tags

--- a/cuadros.html
+++ b/cuadros.html
@@ -36,9 +36,20 @@
         }
 
         </style>
+         <meta name="title" content="Cuadros by Eze Gatica" />
+         <meta name="description" content="Los cuadros que tengo en mi cuarto, ordenados y listos para descargar" />
         <meta name="og:title" content="Cuadros by Eze Gatica" />
         <meta name="og:description" content="Los cuadros que tengo en mi cuarto, ordenados y listos para descargar" />
         <meta name="og:image" content="https://i.ezegatica.com/cuadros/cover-1000x500.jpg" />
+        <meta name="og:url" content="https://ezegatica.com/cuadros" />
+        <meta name="og:type" content="website" />
+        <meta name="og:site_name" content="Eze Gatica" />
+        <meta name="twitter:image" content="https://i.ezegatica.com/cuadros/cover-1000x500.jpg" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="@ezegaticaa" />
+        <meta name="twitter:creator" content="@ezegaticaa" />
+        
+
     <script
         src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
     <script src="https://cdn.tailwindcss.com"></script>
