Cambios en el meta og de twitter

--- a/cuadros.html
+++ b/cuadros.html
@@ -45,6 +45,8 @@
         <meta name="og:type" content="website" />
         <meta name="og:site_name" content="Eze Gatica" />
         <meta name="twitter:image" content="https://i.ezegatica.com/cuadros/cover-1000x500.jpg" />
+        <meta name="twitter:title" content="Cuadros de mi cuarto, by Eze Gatica" />
+        <meta name="twitter:description" content="Los cuadros que tengo en mi cuarto, ordenados y listos para descargar" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="@ezegaticaa" />
         <meta name="twitter:creator" content="@ezegaticaa" />
