--- a/cuadros.html
+++ b/cuadros.html
@@ -36,9 +36,9 @@
         }
 
         </style>
-         <meta name="title" content="Cuadros by Eze Gatica" />
-         <meta name="description" content="Los cuadros que tengo en mi cuarto, ordenados y listos para descargar" />
-        <meta name="og:title" content="Cuadros by Eze Gatica" />
+        <meta name="title" content="Mis Cuadros by Eze Gatica" />
+        <meta name="description" content="Los cuadros que tengo en mi cuarto, ordenados y listos para descargar" />
+        <meta name="og:title" content="Mis Cuadros by Eze Gatica" />
         <meta name="og:description" content="Los cuadros que tengo en mi cuarto, ordenados y listos para descargar" />
         <meta name="og:image" content="https://i.ezegatica.com/cuadros/cover-1000x500.jpg" />
         <meta name="og:url" content="https://ezegatica.com/cuadros" />
