--- a/cuadros.html
+++ b/cuadros.html
@@ -34,23 +34,22 @@
             left: 10px;
             color: white;
         }
+    </style>
+    <meta name="title" content="Mis Cuadros by Eze Gatica" />
+    <meta name="description" content="Los cuadros que tengo en mi cuarto, ordenados y listos para descargar" />
+    <meta name="og:title" content="Mis Cuadros by Eze Gatica" />
+    <meta name="og:description" content="Los cuadros que tengo en mi cuarto, ordenados y listos para descargar" />
+    <meta name="og:image" content="https://i.ezegatica.com/cuadros/cover-1000x500.jpg" />
+    <meta name="og:url" content="https://ezegatica.com/cuadros" />
+    <meta name="og:type" content="website" />
+    <meta name="og:site_name" content="Eze Gatica" />
+    <meta name="twitter:image" content="https://i.ezegatica.com/cuadros/cover-1000x500.jpg" />
+    <meta name="twitter:title" content="Cuadros de mi cuarto, by Eze Gatica" />
+    <meta name="twitter:description" content="Los cuadros que tengo en mi cuarto, ordenados y listos para descargar" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@ezegaticaa" />
+    <meta name="twitter:creator" content="@ezegaticaa" />
 
-        </style>
-        <meta name="title" content="Mis Cuadros by Eze Gatica" />
-        <meta name="description" content="Los cuadros que tengo en mi cuarto, ordenados y listos para descargar" />
-        <meta name="og:title" content="Mis Cuadros by Eze Gatica" />
-        <meta name="og:description" content="Los cuadros que tengo en mi cuarto, ordenados y listos para descargar" />
-        <meta name="og:image" content="https://i.ezegatica.com/cuadros/cover-1000x500.jpg" />
-        <meta name="og:url" content="https://ezegatica.com/cuadros" />
-        <meta name="og:type" content="website" />
-        <meta name="og:site_name" content="Eze Gatica" />
-        <meta name="twitter:image" content="https://i.ezegatica.com/cuadros/cover-1000x500.jpg" />
-        <meta name="twitter:title" content="Cuadros de mi cuarto, by Eze Gatica" />
-        <meta name="twitter:description" content="Los cuadros que tengo en mi cuarto, ordenados y listos para descargar" />
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:site" content="@ezegaticaa" />
-        <meta name="twitter:creator" content="@ezegaticaa" />
-        
 
     <script
         src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
@@ -69,8 +68,8 @@
     </div>
     <div>
         <div class="w-full h-auto lg:h-[600px] overflow-hidden">
-            <img src="https://i.ezegatica.com/cuadros/cover-2000x1000.jpg" alt="Foto de los cuadros" width="1200" height="600"
-                class="w-full h-full object-cover" style="aspect-ratio: 1200 / 600; object-fit: cover;" />
+            <img src="https://i.ezegatica.com/cuadros/cover-2000x1000.jpg" alt="Foto de los cuadros" width="1200"
+                height="600" class="w-full h-full object-cover" style="aspect-ratio: 1200 / 600; object-fit: cover;" />
         </div>
         <div class="w-full max-w-6xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
             <h1 class="text-3xl font-bold mb-8">Cuadros</h1>
@@ -91,36 +90,19 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/flying-lotus-LA-2x3.jpg"
-                        alt="Flying Lotus - L.A. EP 2 X 3 cover" width="300" height="300"
-                        style="aspect-ratio: 300 / 300; object-fit: cover;"
+                    <img src="https://i.ezegatica.com/cuadros/jackboys-jackboys.jpg" alt="JACKBOYS - JACKBOYS cover"
+                        width="300" height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
                     <div
                         class="absolute inset-0 bg-black/70 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <div class="text-white text-center space-y-2">
-                            <h3 class="text-lg font-bold">L.A. EP 2 X 3</h3>
-                            <p class="text-sm">Flying Lotus</p>
+                            <h3 class="text-lg font-bold">JACKBOYS</h3>
+                            <p class="text-sm">JACKBOYS</p>
                             <a target="_blank"
                                 class="inline-flex items-center justify-center rounded-md bg-gray-900 px-3 py-1.5 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/70 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50/90 dark:text-gray-900 dark:hover:bg-gray-50/70 dark:focus-visible:ring-gray-300"
-                                href="https://i.ezegatica.com/cuadros/flying-lotus-LA-2x3.jpg">HD
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/kanye-west-mbdtf.jpg"
-                        alt="Kanye West - My Beautiful Dark Twisted Fantasy cover" width="300" height="300"
-                        style="aspect-ratio: 300 / 300; object-fit: cover;"
-                        class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
-                    <div
-                        class="absolute inset-0 bg-black/70 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <div class="text-white text-center space-y-2">
-                            <h3 class="text-sm font-bold">My Beautiful Dark Twisted Fantasy</h3>
-                            <p class="text-sm">Kanye West</p>
-                            <a target="_blank"
-                                class="inline-flex items-center justify-center rounded-md bg-gray-900 px-3 py-1.5 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/70 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50/90 dark:text-gray-900 dark:hover:bg-gray-50/70 dark:focus-visible:ring-gray-300"
-                                href="https://i.ezegatica.com/cuadros/kanye-west-mbdtf.jpg">HD
+                                href="https://i.ezegatica.com/cuadros/jackboys-jackboys.jpg">HD
                             </a>
                         </div>
                     </div>
@@ -138,6 +120,23 @@
                             <a target="_blank"
                                 class="inline-flex items-center justify-center rounded-md bg-gray-900 px-3 py-1.5 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/70 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50/90 dark:text-gray-900 dark:hover:bg-gray-50/70 dark:focus-visible:ring-gray-300"
                                 href="https://i.ezegatica.com/cuadros/red%20hot%20chilli%20pepers%20blood%20sugar%20magik.png">HD
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="relative group cursor-pointer overflow-hidden rounded-lg">
+                    <img src="https://i.ezegatica.com/cuadros/kanye-west-mbdtf.jpg"
+                        alt="Kanye West - My Beautiful Dark Twisted Fantasy cover" width="300" height="300"
+                        style="aspect-ratio: 300 / 300; object-fit: cover;"
+                        class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
+                    <div
+                        class="absolute inset-0 bg-black/70 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <div class="text-white text-center space-y-2">
+                            <h3 class="text-sm font-bold">My Beautiful Dark Twisted Fantasy</h3>
+                            <p class="text-sm">Kanye West</p>
+                            <a target="_blank"
+                                class="inline-flex items-center justify-center rounded-md bg-gray-900 px-3 py-1.5 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/70 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50/90 dark:text-gray-900 dark:hover:bg-gray-50/70 dark:focus-visible:ring-gray-300"
+                                href="https://i.ezegatica.com/cuadros/kanye-west-mbdtf.jpg">HD
                             </a>
                         </div>
                     </div>
@@ -196,6 +195,23 @@
                 </div>
 
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
+                    <img src="https://i.ezegatica.com/cuadros/flying-lotus-LA-2x3.jpg"
+                        alt="Flying Lotus - L.A. EP 2 X 3 cover" width="300" height="300"
+                        style="aspect-ratio: 300 / 300; object-fit: cover;"
+                        class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
+                    <div
+                        class="absolute inset-0 bg-black/70 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <div class="text-white text-center space-y-2">
+                            <h3 class="text-lg font-bold">L.A. EP 2 X 3</h3>
+                            <p class="text-sm">Flying Lotus</p>
+                            <a target="_blank"
+                                class="inline-flex items-center justify-center rounded-md bg-gray-900 px-3 py-1.5 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/70 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50/90 dark:text-gray-900 dark:hover:bg-gray-50/70 dark:focus-visible:ring-gray-300"
+                                href="https://i.ezegatica.com/cuadros/flying-lotus-LA-2x3.jpg">HD
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="relative group cursor-pointer overflow-hidden rounded-lg">
                     <img src="https://i.ezegatica.com/cuadros/daft-punk-random-access-memories.png"
                         alt="Daft Punk - Random Access Memories cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
@@ -208,22 +224,6 @@
                             <a target="_blank"
                                 class="inline-flex items-center justify-center rounded-md bg-gray-900 px-3 py-1.5 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/70 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50/90 dark:text-gray-900 dark:hover:bg-gray-50/70 dark:focus-visible:ring-gray-300"
                                 href="https://i.ezegatica.com/cuadros/daft-punk-random-access-memories.png">HD
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/jackboys-jackboys.jpg" alt="JACKBOYS - JACKBOYS cover"
-                        width="300" height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
-                        class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
-                    <div
-                        class="absolute inset-0 bg-black/70 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <div class="text-white text-center space-y-2">
-                            <h3 class="text-lg font-bold">JACKBOYS</h3>
-                            <p class="text-sm">JACKBOYS</p>
-                            <a target="_blank"
-                                class="inline-flex items-center justify-center rounded-md bg-gray-900 px-3 py-1.5 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/70 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50/90 dark:text-gray-900 dark:hover:bg-gray-50/70 dark:focus-visible:ring-gray-300"
-                                href="https://i.ezegatica.com/cuadros/jackboys-jackboys.jpg">HD
                             </a>
                         </div>
                     </div>
@@ -263,6 +263,22 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
+                    <img src="https://i.ezegatica.com/cuadros/catriel-el-disko.png" alt="Catriel - El Disko cover"
+                        width="300" height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
+                        class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
+                    <div
+                        class="absolute inset-0 bg-black/70 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <div class="text-white text-center space-y-2">
+                            <h3 class="text-lg font-bold">EL DISKO</h3>
+                            <p class="text-sm">CA7RIEL</p>
+                            <a target="_blank"
+                                class="inline-flex items-center justify-center rounded-md bg-gray-900 px-3 py-1.5 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/70 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50/90 dark:text-gray-900 dark:hover:bg-gray-50/70 dark:focus-visible:ring-gray-300"
+                                href="https://i.ezegatica.com/cuadros/catriel-el-disko.png">HD
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="relative group cursor-pointer overflow-hidden rounded-lg">
                     <img src="https://i.ezegatica.com/cuadros/denzel-curry-melt-my-eyez.jpg"
                         alt="Denzel Curry - Melt My Eyez See Your Future cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
@@ -275,22 +291,6 @@
                             <a target="_blank"
                                 class="inline-flex items-center justify-center rounded-md bg-gray-900 px-3 py-1.5 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/70 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50/90 dark:text-gray-900 dark:hover:bg-gray-50/70 dark:focus-visible:ring-gray-300"
                                 href="https://i.ezegatica.com/cuadros/denzel-curry-melt-my-eyez.jpg">HD
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/catriel-el-disko.png" alt="Catriel - El Disko cover"
-                        width="300" height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
-                        class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
-                    <div
-                        class="absolute inset-0 bg-black/70 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <div class="text-white text-center space-y-2">
-                            <h3 class="text-lg font-bold">EL DISKO</h3>
-                            <p class="text-sm">CA7RIEL</p>
-                            <a target="_blank"
-                                class="inline-flex items-center justify-center rounded-md bg-gray-900 px-3 py-1.5 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/70 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50/90 dark:text-gray-900 dark:hover:bg-gray-50/70 dark:focus-visible:ring-gray-300"
-                                href="https://i.ezegatica.com/cuadros/catriel-el-disko.png">HD
                             </a>
                         </div>
                     </div>
